--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="logo">
+            <a href="#" class="logo__link">
+              <img
+                class="logo__link-img"
+                src="./images/logo.png"
+                alt="site logo"
+              />
+            </a>
+          </div>
+          <nav class="menu">
+            <button class="menu__btn"></button>
+          </nav>
+        </div>
+      </div>
+    </header>
     <script src="js/main.min.js"></script>
   </body>
 </html>
