created top section in html

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,19 @@
         </div>
       </div>
     </header>
+    <section class="top">
+      <div class="top__slider">
+        <div class="top__slider-item">
+          <h3 class="top__slider-title">Мысли глобально</h3>
+        </div>
+        <div class="top__slider-item">
+          <h3 class="top__slider-title">Смотри в будущее</h3>
+        </div>
+        <div class="top__slider-item">
+          <h3 class="top__slider-title">Действуй наверняка</h3>
+        </div>
+      </div>
+    </section>
     <script src="js/main.min.js"></script>
   </body>
 </html>
