conneted fonts to style

--- a/app/index.html
+++ b/app/index.html
@@ -27,15 +27,15 @@
       </div>
     </header>
     <section class="top">
-      <div class="top__slider">
-        <div class="top__slider-item">
-          <h3 class="top__slider-title">Мысли глобально</h3>
+      <div class="top-slider">
+        <div class="top-slider__item">
+          <h3 class="top-slider__title">Мысли глобально</h3>
         </div>
-        <div class="top__slider-item">
-          <h3 class="top__slider-title">Смотри в будущее</h3>
+        <div class="top-slider__item">
+          <h3 class="top-slider__title">Смотри в будущее</h3>
         </div>
-        <div class="top__slider-item">
-          <h3 class="top__slider-title">Действуй наверняка</h3>
+        <div class="top-slider__item">
+          <h3 class="top-slider__title">Действуй наверняка</h3>
         </div>
       </div>
     </section>
