--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"
-    />
+    <link rel="stylesheet" href="libs/slick/slick.css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
@@ -44,6 +40,7 @@
         </div>
       </div>
     </section>
+    <script src="libs/slick/slick.min.js"></script>
     <script src="js/main.min.js"></script>
   </body>
 </html>
