--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,11 @@
         </div>
       </div>
     </section>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script src="libs/slick/slick.min.js"></script>
     <script src="js/main.min.js"></script>
   </body>
