added btn to slider

--- a/app/index.html
+++ b/app/index.html
@@ -31,12 +31,15 @@
       <div class="top-slider">
         <div class="top-slider__item">
           <h3 class="top-slider__title">Мысли глобально</h3>
+          <div class="top-slider__btn">Подробнее</div>
         </div>
         <div class="top-slider__item">
           <h3 class="top-slider__title">Смотри в будущее</h3>
+          <div class="top-slider__btn">Подробнее</div>
         </div>
         <div class="top-slider__item">
           <h3 class="top-slider__title">Действуй наверняка</h3>
+          <div class="top-slider__btn">Подробнее</div>
         </div>
       </div>
     </section>
