--- a/app/index.html
+++ b/app/index.html
@@ -31,14 +31,26 @@
       <div class="top-slider">
         <div class="top-slider__item">
           <h3 class="top-slider__title">Мысли глобально</h3>
+          <p class="top-slider__text">
+            Di Gі - это диджитал агентство полного цикла, направленное на самый
+            лучший результат наших клиентов в маркетинге, продажах и управлении
+          </p>
           <button class="top-slider__btn">Подробнее</button>
         </div>
         <div class="top-slider__item">
           <h3 class="top-slider__title">Смотри в будущее</h3>
+          <p class="top-slider__text">
+            Di Gі - это диджитал агентство полного цикла, направленное на самый
+            лучший результат наших клиентов в маркетинге, продажах и управлении
+          </p>
           <button class="top-slider__btn">Подробнее</button>
         </div>
         <div class="top-slider__item">
           <h3 class="top-slider__title">Действуй наверняка</h3>
+          <p class="top-slider__text">
+            Di Gі - это диджитал агентство полного цикла, направленное на самый
+            лучший результат наших клиентов в маркетинге, продажах и управлении
+          </p>
           <button class="top-slider__btn">Подробнее</button>
         </div>
       </div>
