--- a/app/index.html
+++ b/app/index.html
@@ -40,16 +40,15 @@
         <div class="top-slider__item">
           <h3 class="top-slider__title">Смотри в будущее</h3>
           <p class="top-slider__text">
-            Di Gі - это диджитал агентство полного цикла, направленное на самый
-            лучший результат наших клиентов в маркетинге, продажах и управлении
+            Di Gі - на рынке уже более 5 лет и постоянно развивается
           </p>
           <button class="top-slider__btn">Подробнее</button>
         </div>
         <div class="top-slider__item">
           <h3 class="top-slider__title">Действуй наверняка</h3>
           <p class="top-slider__text">
-            Di Gі - это диджитал агентство полного цикла, направленное на самый
-            лучший результат наших клиентов в маркетинге, продажах и управлении
+            Di Gі - наша слаженная команда профессионалов поможет вам выбрать и
+            реализовать ваши идеи
           </p>
           <button class="top-slider__btn">Подробнее</button>
         </div>
