--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,18 @@
         </div>
       </div>
     </section>
+    <section class="call">
+      <div class="container">
+        <div class="call__inner">
+          <h5 class="call__title">Вы полюбите нас с первой встречи!</h5>
+          <p class="call__text">
+            Мы предоставляем комплексный подход к продвижению компании,
+            продуктов и услуг в цифровой сфере.
+          </p>
+          <button class="call__btn">ПЕРЕЗВОНИТЕ МНЕ</button>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
