--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,26 @@
         </div>
       </div>
     </section>
+    <section class="services">
+      <div class="container">
+        <div class="services__inner">
+          <div class="services__head">
+            <h4 class="services__title title"></h4>
+            <p class="services__descr"></p>
+            <p class="services__text"></p>
+          </div>
+          <div class="services__items"></div>
+          <div class="services__item">
+            <div class="services__item-inner">
+              <img class="services__item-img" src="images/serv-1.svg" alt="" >
+              <h6 class="services__item-title"></h6>
+              <p class="services__item-text"></p>
+              <a href="" class="services__item-link"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
