added services block(content)

--- a/app/index.html
+++ b/app/index.html
@@ -72,19 +72,20 @@
       <div class="container">
         <div class="services__inner">
           <div class="services__head">
-            <h4 class="services__title title"></h4>
-            <p class="services__descr"></p>
-            <p class="services__text"></p>
+            <h4 class="services__title title">Сервис</h4>
+            <p class="services__descr">От идеи до незабываемого и измеримого результата.</p>
+            <p class="services__text">Интеграция безупречного производства, передовых технологий и тщательного измерения производительности</p>
           </div>
-          <div class="services__items"></div>
-          <div class="services__item">
-            <div class="services__item-inner">
-              <img class="services__item-img" src="images/serv-1.svg" alt="" >
-              <h6 class="services__item-title"></h6>
-              <p class="services__item-text"></p>
-              <a href="" class="services__item-link"></a>
+          <div class="services__items">
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-1.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
     </section>
