--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,62 @@
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-2.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-3.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-4.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-5.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-6.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-7.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-inner">
+                <img class="services__item-img" src="images/serv-8.svg" alt="" >
+                <h6 class="services__item-title">СТРАТЕГИЯ</h6>
+                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
           </div> 
         </div>
       </div>
