fixed bug in call block(html0

--- a/app/index.html
+++ b/app/index.html
@@ -59,11 +59,11 @@
         <div class="call__inner">
           <div class="call__box">
             <h5 class="call__title">Вы полюбите нас с первой встречи!</h5>
-          <p class="call__text">
+            <p class="call__text">
+              Мы предоставляем комплексный подход к продвижению компании,
+              продуктов и услуг в цифровой сфере.
+            </p>
           </div>
-            Мы предоставляем комплексный подход к продвижению компании,
-            продуктов и услуг в цифровой сфере.
-          </p>
           <button class="call__btn">ПЕРЕЗВОНИТЕ МНЕ</button>
         </div>
       </div>
@@ -73,61 +73,106 @@
         <div class="services__inner">
           <div class="services__head">
             <h4 class="services__title title">Сервис</h4>
-            <p class="services__descr">От идеи до незабываемого и измеримого результата.</p>
-            <p class="services__text">Интеграция безупречного производства, передовых технологий и тщательного измерения производительности</p>
+            <p class="services__descr">
+              От идеи до незабываемого и измеримого результата.
+            </p>
+            <p class="services__text">
+              Интеграция безупречного производства, передовых технологий и
+              тщательного измерения производительности
+            </p>
           </div>
           <div class="services__items">
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-1.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-1.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">СТРАТЕГИЯ</h6>
-                <p class="services__item-text">тщательно продумаем наилучшие варианты</p>
+                <p class="services__item-text">
+                  тщательно продумаем наилучшие варианты
+                </p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-2.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-2.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">АНАЛИЗ</h6>
-                <p class="services__item-text">подберем лучший вариант для вас</p>
+                <p class="services__item-text">
+                  подберем лучший вариант для вас
+                </p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-3.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-3.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">СОЦ СЕТИ</h6>
-                <p class="services__item-text">работаем с крупнейшими соц. сетями</p>
+                <p class="services__item-text">
+                  работаем с крупнейшими соц. сетями
+                </p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-4.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-4.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">РАЗВИТИЕ</h6>
-                <p class="services__item-text">готовы масштабировать проект под ваши нужды</p>
+                <p class="services__item-text">
+                  готовы масштабировать проект под ваши нужды
+                </p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-5.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-5.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">КОНТЕНТ</h6>
-                <p class="services__item-text">то что важно для вас - важно и для нас</p>
+                <p class="services__item-text">
+                  то что важно для вас - важно и для нас
+                </p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-6.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-6.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">ДИЗАЙН UX</h6>
-                <p class="services__item-text">Создадим уникальный и удобный дизайн</p>
+                <p class="services__item-text">
+                  Создадим уникальный и удобный дизайн
+                </p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-7.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-7.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">ТАРГЕТИРОВАННАЯ РЕКЛАМА</h6>
                 <p class="services__item-text">поможем найти новых клиентов</p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
@@ -135,13 +180,17 @@
             </div>
             <div class="services__item">
               <div class="services__item-inner">
-                <img class="services__item-img" src="images/serv-8.svg" alt="" >
+                <img
+                  class="services__item-img"
+                  src="images/serv-8.svg"
+                  alt=""
+                />
                 <h6 class="services__item-title">ПРОДУКТ</h6>
                 <p class="services__item-text">самое лучшее для вас</p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
-            </div>       
-          </div> 
+            </div>
+          </div>
         </div>
       </div>
     </section>
