replaced images in services, renamed image ext.

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-1.svg"
+                  src="images/serv-1.png"
                   alt=""
                 />
                 <h6 class="services__item-title">СТРАТЕГИЯ</h6>
@@ -100,7 +100,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-2.svg"
+                  src="images/serv-2.png"
                   alt=""
                 />
                 <h6 class="services__item-title">АНАЛИЗ</h6>
@@ -114,7 +114,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-3.svg"
+                  src="images/serv-3.png"
                   alt=""
                 />
                 <h6 class="services__item-title">СОЦ СЕТИ</h6>
@@ -128,7 +128,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-4.svg"
+                  src="images/serv-4.png"
                   alt=""
                 />
                 <h6 class="services__item-title">РАЗВИТИЕ</h6>
@@ -142,7 +142,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-5.svg"
+                  src="images/serv-5.png"
                   alt=""
                 />
                 <h6 class="services__item-title">КОНТЕНТ</h6>
@@ -156,7 +156,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-6.svg"
+                  src="images/serv-6.png"
                   alt=""
                 />
                 <h6 class="services__item-title">ДИЗАЙН UX</h6>
@@ -170,7 +170,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-7.svg"
+                  src="images/serv-7.png"
                   alt=""
                 />
                 <h6 class="services__item-title">ТАРГЕТИРОВАННАЯ РЕКЛАМА</h6>
@@ -182,7 +182,7 @@
               <div class="services__item-inner">
                 <img
                   class="services__item-img"
-                  src="images/serv-8.svg"
+                  src="images/serv-8.png"
                   alt=""
                 />
                 <h6 class="services__item-title">ПРОДУКТ</h6>
