--- a/app/index.html
+++ b/app/index.html
@@ -173,10 +173,7 @@
                   src="images/serv-7.png"
                   alt=""
                 />
-                <h6 class="services__item-title">
-                  ТАРГЕТИРОВАННАЯ <br />
-                  РЕКЛАМА
-                </h6>
+                <h6 class="services__item-title">ТАРГЕТИРОВАННАЯ РЕКЛАМА</h6>
                 <p class="services__item-text">поможем найти новых клиентов</p>
                 <a href="" class="services__item-link">ПОДРОБНЕЕ</a>
               </div>
