--- a/app/index.html
+++ b/app/index.html
@@ -194,6 +194,32 @@
         </div>
       </div>
     </section>
+    <section class="project">
+      <div class="container">
+        <div class="project__title title"></div>
+        <div class="project__items">
+          <div class="porject__item">
+            <!-- add style attr for backend, can change image  -->
+            <div
+              class="project__item-img"
+              style="background-image: url(image/project-1.jpg)"
+            >
+              <div class="porject__item-inner">
+                <a class="project__item-info" href="#">
+                  <img
+                    src="images/info.svg"
+                    alt="more informaion about project"
+                /></a>
+                <a class="project__item-search" href="#">
+                  <img src="images/search/svg" alt="see photo of project"
+                /></a>
+              </div>
+            </div>
+            <a class="project__item-link" href="#">Lalique бутик</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
