add project section(html)

--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,63 @@
             </div>
             <a class="project__item-link" href="#">Lalique бутик</a>
           </div>
+          <div class="porject__item">
+            <!-- add style attr for backend, can change image  -->
+            <div
+              class="project__item-img"
+              style="background-image: url(image/project-2.jpg)"
+            >
+              <div class="porject__item-inner">
+                <a class="project__item-info" href="#">
+                  <img
+                    src="images/info.svg"
+                    alt="more informaion about project"
+                /></a>
+                <a class="project__item-search" href="#">
+                  <img src="images/search/svg" alt="see photo of project"
+                /></a>
+              </div>
+            </div>
+            <a class="project__item-link" href="#">Строительство домов</a>
+          </div>
+          <div class="porject__item">
+            <!-- add style attr for backend, can change image  -->
+            <div
+              class="project__item-img"
+              style="background-image: url(image/project-3.jpg)"
+            >
+              <div class="porject__item-inner">
+                <a class="project__item-info" href="#">
+                  <img
+                    src="images/info.svg"
+                    alt="more informaion about project"
+                /></a>
+                <a class="project__item-search" href="#">
+                  <img src="images/search/svg" alt="see photo of project"
+                /></a>
+              </div>
+            </div>
+            <a class="project__item-link" href="#">Кофейня</a>
+          </div>
+          <div class="porject__item">
+            <!-- add style attr for backend, can change image  -->
+            <div
+              class="project__item-img"
+              style="background-image: url(image/project-4.jpg)"
+            >
+              <div class="porject__item-inner">
+                <a class="project__item-info" href="#">
+                  <img
+                    src="images/info.svg"
+                    alt="more informaion about project"
+                /></a>
+                <a class="project__item-search" href="#">
+                  <img src="images/search/svg" alt="see photo of project"
+                /></a>
+              </div>
+            </div>
+            <a class="project__item-link" href="#">Уникальные туры</a>
+          </div>
         </div>
       </div>
     </section>
