add section team; some fix html

--- a/app/index.html
+++ b/app/index.html
@@ -196,13 +196,13 @@
     </section>
     <section class="project">
       <div class="container">
-        <div class="project__title title"></div>
+        <h4 class="project__title title">Наши Проекты</h4>
         <div class="project__items">
           <div class="porject__item">
             <!-- add style attr for backend, can change image  -->
             <div
               class="project__item-img"
-              style="background-image: url(image/project-1.jpg)"
+              style="background-image: url(images/project-1.jpg)"
             >
               <div class="porject__item-inner">
                 <a class="project__item-info" href="#">
@@ -221,7 +221,7 @@
             <!-- add style attr for backend, can change image  -->
             <div
               class="project__item-img"
-              style="background-image: url(image/project-2.jpg)"
+              style="background-image: url(images/project-2.jpg)"
             >
               <div class="porject__item-inner">
                 <a class="project__item-info" href="#">
@@ -240,7 +240,7 @@
             <!-- add style attr for backend, can change image  -->
             <div
               class="project__item-img"
-              style="background-image: url(image/project-3.jpg)"
+              style="background-image: url(images/project-3.jpg)"
             >
               <div class="porject__item-inner">
                 <a class="project__item-info" href="#">
@@ -259,7 +259,7 @@
             <!-- add style attr for backend, can change image  -->
             <div
               class="project__item-img"
-              style="background-image: url(image/project-4.jpg)"
+              style="background-image: url(images/project-4.jpg)"
             >
               <div class="porject__item-inner">
                 <a class="project__item-info" href="#">
@@ -275,6 +275,26 @@
             <a class="project__item-link" href="#">Уникальные туры</a>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="team">
+      <div class="container">
+        
+        <div class="team__inner">
+         <img class="team__images" src="images/team.jpg" alt="our team">
+         <div class="team__content">
+          <h4 class="team__title">Команда</h4>
+          <p class="team__text">
+            Наша команда - это наша самая большая ценность. 
+            Мы трудились, чтобы собрать группу  экспертов,
+            чьи навыки дополняют друг друга. 
+            У членов нашей команды разные истории, но мы разделяем общую страсть к идеалу. Мы верим, чтобы оставаться
+            профессионалом, нужно развиваться, 
+            поэтому мы постоянно ищем способы, как стать лучше 
+            в том, что мы делаем.
+          </p>
+          <button class="team__btn">СМОТРЕТЬ ВИДЕО</button>
+         </div>
       </div>
     </section>
     <script
