--- a/app/index.html
+++ b/app/index.html
@@ -204,14 +204,14 @@
               class="project__item-img"
               style="background-image: url(images/project-1.jpg)"
             >
-              <div class="porject__item-inner">
+              <div class="project__item-inner">
                 <a class="project__item-info" href="#">
                   <img
                     src="images/info.svg"
                     alt="more informaion about project"
                 /></a>
                 <a class="project__item-search" href="#">
-                  <img src="images/search/svg" alt="see photo of project"
+                  <img src="images/search.svg" alt="see photo of project"
                 /></a>
               </div>
             </div>
@@ -223,14 +223,14 @@
               class="project__item-img"
               style="background-image: url(images/project-2.jpg)"
             >
-              <div class="porject__item-inner">
+              <div class="project__item-inner">
                 <a class="project__item-info" href="#">
                   <img
                     src="images/info.svg"
                     alt="more informaion about project"
                 /></a>
                 <a class="project__item-search" href="#">
-                  <img src="images/search/svg" alt="see photo of project"
+                  <img src="images/search.svg" alt="see photo of project"
                 /></a>
               </div>
             </div>
@@ -242,14 +242,14 @@
               class="project__item-img"
               style="background-image: url(images/project-3.jpg)"
             >
-              <div class="porject__item-inner">
+              <div class="project__item-inner">
                 <a class="project__item-info" href="#">
                   <img
                     src="images/info.svg"
                     alt="more informaion about project"
                 /></a>
                 <a class="project__item-search" href="#">
-                  <img src="images/search/svg" alt="see photo of project"
+                  <img src="images/search.svg" alt="see photo of project"
                 /></a>
               </div>
             </div>
@@ -261,14 +261,14 @@
               class="project__item-img"
               style="background-image: url(images/project-4.jpg)"
             >
-              <div class="porject__item-inner">
+              <div class="project__item-inner">
                 <a class="project__item-info" href="#">
                   <img
                     src="images/info.svg"
                     alt="more informaion about project"
                 /></a>
                 <a class="project__item-search" href="#">
-                  <img src="images/search/svg" alt="see photo of project"
+                  <img src="images/search.svg" alt="see photo of project"
                 /></a>
               </div>
             </div>
