added style for team section

--- a/app/index.html
+++ b/app/index.html
@@ -284,15 +284,19 @@
          <img class="team__images" src="images/team.jpg" alt="our team">
          <div class="team__content">
           <h4 class="team__title">Команда</h4>
-          <p class="team__text">
-            Наша команда - это наша самая большая ценность. 
+          <div class="team__text">
+            <p>
+              Наша команда - это наша самая большая ценность. 
             Мы трудились, чтобы собрать группу  экспертов,
             чьи навыки дополняют друг друга. 
+            </p>
+            <p>
             У членов нашей команды разные истории, но мы разделяем общую страсть к идеалу. Мы верим, чтобы оставаться
             профессионалом, нужно развиваться, 
             поэтому мы постоянно ищем способы, как стать лучше 
             в том, что мы делаем.
-          </p>
+            </p> 
+          </div>
           <button class="team__btn">СМОТРЕТЬ ВИДЕО</button>
          </div>
       </div>
