--- a/app/index.html
+++ b/app/index.html
@@ -301,6 +301,19 @@
          </div>
       </div>
     </section>
+    <section class="news">
+      <div class="container">
+        <h4 class="news__title title">Последние Новости</h4>
+        <div class="news__items-wrapper">
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-1.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
