added news item

--- a/app/index.html
+++ b/app/index.html
@@ -311,6 +311,48 @@
               <h5 class="news__item-title"></h5>
             </a>
           </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-2.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-3.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-4.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-5.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-6.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-7.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
+          <div class="news__item">
+            <a class="news__item-link" href="#">
+              <img class="news__item-img" src="./images/news-8.jpg" alt="news picture">
+              <h5 class="news__item-title"></h5>
+            </a>
+          </div>
         </div>
       </div>
     </section>
