added images title to news item

--- a/app/index.html
+++ b/app/index.html
@@ -308,49 +308,49 @@
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-1.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">3Д в брендинге</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-2.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Контекстная реклама</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-3.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Графика</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-4.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Корпоративная культура</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-5.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Уникальный дизайн</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-6.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Взгляд со стороны</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-7.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Соц сети и их польза</h5>
             </a>
           </div>
           <div class="news__item">
             <a class="news__item-link" href="#">
               <img class="news__item-img" src="./images/news-8.jpg" alt="news picture">
-              <h5 class="news__item-title"></h5>
+              <h5 class="news__item-title">Эксклюзивность</h5>
             </a>
           </div>
         </div>
