--- a/app/index.html
+++ b/app/index.html
@@ -306,53 +306,38 @@
         <h4 class="news__title title">Последние Новости</h4>
         <div class="news__items-wrapper">
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-1.jpg" alt="news picture">
+              <a class="news__item-link" href="#"></a>
               <h5 class="news__item-title">3Д в брендинге</h5>
-            </div>
           </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-2.jpg" alt="news picture">
               <h5 class="news__item-title">Контекстная реклама</h5>
-            </div>
           </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-3.jpg" alt="news picture">
               <h5 class="news__item-title">Графика</h5>
-            </div>
           </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-4.jpg" alt="news picture">
               <h5 class="news__item-title">Корпоративная культура</h5>
-            </div>
           </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-5.jpg" alt="news picture">
               <h5 class="news__item-title">Уникальный дизайн</h5>
             </div>
-          </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-6.jpg" alt="news picture">
               <h5 class="news__item-title">Взгляд со стороны</h5>
-            </div>
           </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-7.jpg" alt="news picture">
               <h5 class="news__item-title">Соц сети и их польза</h5>
-            </div>
           </div>
           <div class="news__item">
-            <div class="news__item-link">
               <img class="news__item-img" src="./images/news-8.jpg" alt="news picture">
               <h5 class="news__item-title">Эксклюзивность</h5>
             </div>
-          </div>
         </div>
       </div>
     </section>
