added style for news block

--- a/app/index.html
+++ b/app/index.html
@@ -307,7 +307,11 @@
         <div class="news__items-wrapper">
           <div class="news__item">
               <img class="news__item-img" src="./images/news-1.jpg" alt="news picture">
-              <a class="news__item-link" href="#"></a>
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">3Д в брендинге</h5>
           </div>
           <div class="news__item">
