--- a/app/index.html
+++ b/app/index.html
@@ -316,35 +316,71 @@
           </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-2.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Контекстная реклама</h5>
           </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-3.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Графика</h5>
           </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-4.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Корпоративная культура</h5>
           </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-5.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Уникальный дизайн</h5>
             </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-6.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Взгляд со стороны</h5>
           </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-7.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Соц сети и их польза</h5>
           </div>
           <div class="news__item">
               <img class="news__item-img" src="./images/news-8.jpg" alt="news picture">
+              <a class="news__item-link" href="#">
+                <img
+                  src="images/info.svg"
+                  alt="link to news"
+              /></a>
               <h5 class="news__item-title">Эксклюзивность</h5>
             </div>
         </div>
       </div>
     </section>
+    
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
